ipc/ipdl/test/ipdl/ok/Punion_Namespaced.ipdl
namespace kitties {

union Socks {
    int;
    double;
};

} // namespace kitties


namespace puppies {

[ChildProc=any]
protocol Punion_Namespaced {
child:
    async Msg(Socks s);
};

} // namespace puppies
