ipc/ipdl/test/ipdl/error/PIntrNestedProtocol.ipdl
//error: intr protocol `PIntrNestedProtocol' cannot specify [NestedUpTo]

[NestedUpTo=inside_sync] intr protocol PIntrNestedProtocol {
child:
  [LegacyIntr] intr Msg();
};
